--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Login Page </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#c7365f">
     <!-- bootstrap CDN -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <!-- Font-Awesome CDN -->
