--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <!-- Font-Awesome CDN -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css">
     <!-- StyleSheet Link -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="css/style.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
@@ -36,6 +38,7 @@
                                 <i class="fas fa-lock"></i>
                                 <input class="inp" type="password" id="password" placeholder="Enter Your Password"
                                     required>
+                                    <i class="bi bi-eye-slash" id="togglePassword"></i>
                             </div>
 
                             <div class="form-group">
